test repair recursive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ include(ConfigGBench)
 
 
 set(SOURCE_FILES
+
         BigRRePair.cpp BigRRePair.h
         DummyPartition.cpp DummyPartition.h
         DummyRepairCompressor.cpp DummyRepairCompressor.h
@@ -65,7 +66,21 @@ set(SOURCE_FILES
         model.h
         CLogger.cpp CLogger.h
         Partitioner.cpp Partitioner.h
-        )
+
+        HashParser.cpp HashParser.h
+        SlidingWindow.cpp SlidingWindow.h
+        HashFunction.cpp HashFunction.h
+
+        test/UtilStrings.h
+        HashParserConfig.cpp HashParserConfig.h
+        RepairUtils.h
+        RePairRecursive.cpp RePairRecursive.h
+        RePairRecursiveConfig.cpp RePairRecursiveConfig.h
+        DummyRePair.cpp DummyRePair.h RepairUtils.cpp)
+
+
+
+
 
 add_executable(
         rrpair main.cpp ${SOURCE_FILES}
@@ -78,6 +93,11 @@ cxx_executable_with_flags(t_preprocess_dicc "" "${LIBS};benchmark;sdsl" test/t_p
 cxx_executable_with_flags(t_partition "" "${LIBS};benchmark;sdsl" test/t_partition.cpp ${SOURCE_FILES})
 cxx_executable_with_flags(t_recursive_partition "" "${LIBS};benchmark;sdsl" test/t_recursive_partition.cpp ${SOURCE_FILES})
 cxx_executable_with_flags(t_compressor "" "${LIBS};benchmark;sdsl" test/t_compressor.cpp ${SOURCE_FILES})
+
+cxx_executable_with_flags(t_hash_function "" "${LIBS};benchmark;sdsl" test/t_hash_function.cpp ${SOURCE_FILES})
+cxx_executable_with_flags(t_hash_parser "" "${LIBS};benchmark;sdsl" test/t_hash_parser.cpp ${SOURCE_FILES})
+cxx_executable_with_flags(t_sliding_window "" "${LIBS};benchmark;sdsl" test/t_sliding_window.cpp ${SOURCE_FILES})
+cxx_executable_with_flags(t_repair_recursive "" "${LIBS};benchmark;sdsl" test/t_repair_recursive.cpp ${SOURCE_FILES})
 
 
 cxx_executable_with_flags(b_bigrepair_compression "" "${LIBS};benchmark;sdsl" bench/b_bigrepair_compression.cpp ${SOURCE_FILES})
